# Cr-V-compiler

./: .gitignore  CMakeLists.txt  README.md
include/lexer/: lexer.h  token.h  tokens.def
include/parser/: ast.h  ast_printer.h  parser.h
include/utils/: attributes.h  diagnostic.h
src/compiler/: main.c
src/lexer/: lexer.c  token.c
src/parser/: ast_printer.c  parser.c
src/utils/: diagnostic.c
tests/: test_runner.c
tests/lexer/invalid/: lexer_error.c  missing_semicolon.c  string_literal.c
tests/parser/valid/: arrays_and_while.c  calls_and_subscripts.c  func_params.c  simple_main.c
